feat: ability to view and edit column descriptions of the dataset
